fix: overflowing on iOS

--- a/apps/math-competition/src/app/modules/competition/competition.component.scss
+++ b/apps/math-competition/src/app/modules/competition/competition.component.scss
@@ -19,8 +19,8 @@
   padding: 8px;
   overflow: hidden;
 
-  @include respond-below(xs) {
-    width: 100%;
+  @media (max-width: 1200px) {
+    width: 100vw;
     border: none;
     border-radius: unset;
   }
